--- a/brand_teacher/less/style.less
+++ b/brand_teacher/less/style.less
@@ -1,12 +1,14 @@
 // out: "../css/style.css", compress: false, sourceMap: true
 
 /* colors */
-@btn-color: #6d09e7;
-@icons-color: #6d09e7;
+@btn-color: #9747FF;
 @title-color: #e5e5e5;
-@text-color: #000;
-@block-color: #686868;
-@light-color: #fff;
+@text-light-color: #fff;
+@text-dark-color: #000;
+@block-color: #232323;
+@light-color: #E4E5E7;
+@lines-color: #616161;
+@shadow-color: #b6b6b6;
 
 /* fonts */
 @second-title-font: "Ledger", sans-serif;
@@ -50,14 +52,48 @@
 /* basic elements */
 body {
     background-color: @block-color;
-    color: @light-color;
+    color: @text-dark-color;
     font-size: 14px;
     font-family: @main-font;
     font-weight: 500;
 }
+main {
+    position: relative;
+    top: 100vh;
+}
+h2, h3 {
+    font-family: @second-title-font;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 120%;
+    letter-spacing: 0.09em;
+    text-transform: uppercase;
+    text-align: center;
+}
+h3 {
+    font-size: 16px;
+    letter-spacing: 0.03em;
+}
+.btn {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    background-color: @btn-color;
+    border-radius: 15px;
+    border: none;
+    padding: 20px 30px;
+    color: @text-light-color;
+    font-size: 14px;
+    font-family: @main-font;
+    font-weight: 500;
+    line-height: 120%;
+    letter-spacing: 0.09em;
+}
 
 /* header */
 .header {
+    color: @text-light-color;
     padding-top: 35px;
     &__list {
         margin-bottom: 0;
@@ -74,6 +110,7 @@ body {
     position: fixed;
     top: 0px;
     z-index: -100;
+    color: @text-light-color;
     &__image {
         background-image: url(https://www.dummyimage.com/645x521/bfbfbf/fff.jpg);
         background-repeat: no-repeat;
@@ -101,61 +138,48 @@ body {
     }
 }
 
-/* cube */
-.section {
-    position: relative;
-}
-.cube {
-    width: 300px;
-    height: 300px;
-    position: absolute;
-    bottom:  calc(0% + 300px);
-    right: calc(0% + 300px / 2);
-    z-index: -1000;
-    transform-style: preserve-3d;
-    transform: perspective(700px)  rotateX(-36deg) rotateY(-27deg);
-    transition: all 1s ease;
-
-    & > article {
-        height: 100%;
-        width: 100%;
-        padding: 20px;
-        box-sizing: border-box;
-        position: absolute;
-        transform-style: preserve-3d;
-        background: linear-gradient(0deg, @btn-color, #7b1f84);
-        color: #fff;
-        line-height: 150%;
-        letter-spacing: 0.05em;
-        border-radius: 25px;
-        box-shadow:
-            0 0 1px #f00,
-            0 0 1px #f00,
-            0 0 1px #f00,
-            0 0 1px #f00,
-            0 0 10px #d0e9 inset,
-            0 0 35px #53d5;
-
-            & p {
-                font-weight: 200;
-                font-size: 30px;
-                text-transform: uppercase;
-                height: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
+/* about me */
+.about-me {
+    background-color: @light-color;
+    padding: 85px 0;
+    &__title {
+        padding-bottom: 35px;
+        border-bottom: 1px solid @lines-color;
     }
-    animation: rotation 45s ease-in-out infinite;
-}
-
-.back   {transform: rotateY(-180deg) translateZ(150px);}
-.top    {transform: rotateX( 90deg)  translateZ(150px);}
-.front  {transform:                  translateZ(150px);}
-.bottom {transform: rotateX(-90deg)  translateZ(150px);}
-.left   {transform: rotateY(-90deg)  translateZ(150px);}
-.right  {transform: rotateY( 90deg)  translateZ(150px);}
-
-@keyframes rotation {
-    50% {transform:perspective(700px) rotateX(360deg) rotateY(720deg);}
+    &__items {
+        margin-top: 80px;
+        margin-bottom: 85px;
+    }
+    &__card {
+        border-radius: 13px;
+        border: none;
+        box-shadow: 0 4px 20px 0 @shadow-color;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        width: 100%;
+        padding-bottom: 100%;
+        &-body {
+            display: grid;
+            align-content: center;
+            justify-items: center;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+        }
+        &-title {
+            margin-bottom: 1.4em;
+        }
+        &-text {
+            font-family: @second-title-font;
+            font-weight: 400;
+            font-size: 40px;
+        }
+    }
+    &__btn {
+        text-align: center;
+    }
 }
