--- a/brand_teacher/less/style.less
+++ b/brand_teacher/less/style.less
@@ -209,6 +209,9 @@ ul, ol, p {
     overflow: hidden;
     background-color: @light-color;
     padding: 85px 0 35px;
+    &--block {
+        height: 500px;
+    }
     &--box {
         margin: 0 -100% 0 0;
         position: relative;
