--- a/brand_teacher/css/style.css
+++ b/brand_teacher/css/style.css
@@ -53,9 +53,17 @@ h3 {
 }
 ul,
 ol,
-p {
+p,
+figure,
+h1,
+h2,
+h3,
+h4 {
   padding: 0;
   margin: 0;
+}
+.card-body {
+  padding: 0;
 }
 .btn {
   display: inline-block;
@@ -127,9 +135,14 @@ p {
   padding-bottom: 35px;
   border-bottom: 1px solid #616161;
 }
-.about-me__items {
+.about-me__list {
   margin-top: 80px;
   margin-bottom: 85px;
+  position: relative;
+}
+.about-me__item {
+  position: relative;
+  z-index: 100;
 }
 .about-me__card {
   background-color: #ececec;
@@ -142,6 +155,7 @@ p {
   position: relative;
   width: 100%;
   padding-bottom: 100%;
+  transition: all 0.5s ease-in-out;
 }
 .about-me__card-body {
   display: grid;
@@ -162,17 +176,53 @@ p {
   font-size: 40px;
 }
 .about-me__card--textbox {
+  position: absolute;
   display: flex;
 }
 .about-me__card--textbox .about-me__card {
-  padding-bottom: 0;
+  padding-bottom: 30%;
+  background-color: inherit;
+  box-shadow: none;
+}
+.about-me__card--textbox .about-me__card-body {
+  padding: 60px;
 }
 .about-me__card--textbox .about-me__card-fulltext {
   border: none;
-  margin: 0;
+  background-color: inherit;
+  font-weight: 300;
+  font-size: 16px;
 }
 .about-me__btn {
   text-align: center;
+}
+.about-me #first_box_info,
+.about-me #second_box_info,
+.about-me #third_box_info,
+.about-me #fourth_box_info {
+  transform: translateX(-35%) scaleX(0);
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+}
+.about-me #first_box_info.visible,
+.about-me #second_box_info.visible,
+.about-me #third_box_info.visible,
+.about-me #fourth_box_info.visible {
+  transform: translateX(35%) scaleX(1);
+  opacity: 1;
+}
+.about-me #first_box_count,
+.about-me #second_box_count,
+.about-me #third_box_count,
+.about-me #fourth_box_count {
+  opacity: 1;
+  transition: all 0.5s ease-in-out;
+}
+.about-me #first_box_count.hidden,
+.about-me #second_box_count.hidden,
+.about-me #third_box_count.hidden,
+.about-me #fourth_box_count.hidden {
+  opacity: 0;
 }
 /* competence */
 .competence__slider {
@@ -182,7 +232,7 @@ p {
   padding: 85px 0 35px;
 }
 .competence__slider--block {
-  height: 500px;
+  height: 430px;
 }
 .competence__slider--box {
   margin: 0 -100% 0 0;
@@ -219,6 +269,7 @@ p {
 }
 .competence__slider--preview {
   margin-top: 100px;
+  width: 80%;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
@@ -228,10 +279,6 @@ p {
   margin-top: 198px;
   font-size: 16px;
   font-weight: 300;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
 }
 .competence__slider .slick-track {
   display: grid;
@@ -266,33 +313,145 @@ p {
   padding-top: 55px;
 }
 .problems__item {
-  border-radius: 13px;
+  position: relative;
+  overflow: hidden;
+  background-color: #fff;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  transition: background-color 0.5s ease-in-out, background-image 0.5s ease-in-out;
+  height: 230px;
+  border-radius: 25px;
   border: none;
   box-shadow: 0 4px 20px 0 #b6b6b6;
   padding: 35px;
-  background-color: #ececec;
+  padding-right: 55px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.problems__item .lorem_sq {
+  background-color: #b6b6b6;
+  width: 100px;
+  height: 100px;
+  transition: opacity 0.2s ease-in-out;
+}
+.problems__item--info {
+  transform: translateY(90%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  transition: transform 0.5s ease-in-out;
 }
 .problems__item--title {
-  margin-top: 170px;
   text-align: left;
 }
 .problems__item--text {
   font-size: 16px;
   font-weight: 300;
-  display: none;
+  visibility: hidden;
+  transition: all 0.5s ease-in-out;
 }
 .problems__item:hover {
+  color: #fff;
+}
+.problems__item:hover.first {
+  background-image: url(../img/svg/ellipse_problem_violet.svg);
   background-color: #232323;
 }
-.problems__item:hover .problems__item--text,
-.problems__item:hover .problems__item--title {
-  color: #fff;
-  display: block;
+.problems__item:hover.second {
+  background-image: url(../img/svg/ellipse_problem_blue.svg);
+  background-color: #232323;
+}
+.problems__item:hover .problems__item--info {
+  transform: translateY(0);
+}
+.problems__item:hover .lorem_sq {
+  opacity: 0;
+}
+.problems__item:hover .problems__item--text {
+  visibility: visible;
 }
 /* results */
 .results {
   background-color: #E4E5E7;
   padding: 85px 0;
+  position: relative;
+}
+.results__box {
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  margin-bottom: 130px;
+}
+.results__box h2 {
+  text-align: left;
+  align-self: flex-start;
+}
+.results__box--square {
+  width: 150px;
+  height: 150px;
+  border-radius: 25px;
+  transform: rotate(45deg);
+  box-shadow: inset 8px 0 20px 0 rgba(151, 71, 255, 0.4), inset -8px 0 25px 0 rgba(151, 71, 255, 0.4), 11px 10px 15px 0 rgba(0, 0, 0, 0.25);
+  background-color: #232323;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.results__box--square .results__box--title {
+  transform: rotate(315deg);
+  font-family: "Ledger", sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+}
+.results__box--square .results__box--title span {
+  display: block;
+  font-size: 40px;
+}
+.results__box--info-title {
+  text-align: left;
+  margin-bottom: 30px;
+}
+.results__box--info-list {
+  padding-left: 18px;
+}
+.results__box--info-list li {
+  list-style-type: disc;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 120%;
+  margin-bottom: 10px;
+}
+.results__box--info-list li:last-child {
+  margin-bottom: 0;
+}
+.results__box:last-child {
+  margin-bottom: 0;
+}
+.results__box:nth-child(2n) {
+  position: absolute;
+  z-index: 100;
+  margin-bottom: 0;
+}
+.results__box--transition {
+  position: relative;
+}
+.results__box--transition svg {
+  overflow: visible;
+}
+.results .first-line {
+  top: 25%;
+  left: calc(50% - 517px / 2);
+}
+.results .second-line {
+  bottom: 20%;
+  left: calc(55% - 731px / 2);
 }
 /* reviews */
 .reviews {
